fixed small screen layout issue

--- a/index.css
+++ b/index.css
@@ -157,6 +157,10 @@ header {
     bottom: 20px;
   }
 
+  .answer {
+    font-size: 16px;
+  }
+
   .quiz-button {
     width: 137px;
     height: 137px;
